Bug 153441 - LibreOffice OpenType font features list is blocked
Summary: LibreOffice OpenType font features list is blocked
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3.2
Keywords:
Depends on:
Blocks: Paragraph-Dialog
  Show dependency treegraph
 
Reported: 2023-02-07 15:01 UTC by BobBau
Modified: 2023-05-15 19:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of dialog. (52.56 KB, image/png)
2023-02-07 15:02 UTC, BobBau
Details
Screen recording (961.33 KB, video/quicktime)
2023-02-08 07:16 UTC, Khaled Hosny
Details
Screenshot of OpenType Font Features with all checkboxes set to "Default" (i.e. with a minus sign, neither checked with a checkmark nor unchecked). Clicking on those checkboxes has no effect. (70.08 KB, image/png)
2023-04-20 16:09 UTC, EM
Details
Screenshot of new preselected font dialog. (117.86 KB, image/jpeg)
2023-05-15 17:54 UTC, BobBau
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BobBau 2023-02-07 15:01:51 UTC
Description:
In the OpenType font features dialog all settings are preselected and blocked. You can't click on them either, both in standing text and in new documents. It  affects all components of LO (Writer, Calc, Impress).

Steps to Reproduce:
1. Choose some Text.
2. Open Dialog Format/Character/font/Functions.
3. Try to select Font features.

Actual Results:
All checkboxes are premarked.

Expected Results:
You can select and combine Open Type font features as you wish.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: 50(Build:3)
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Ubuntu package version: 1:7.5.0~rc3-0ubuntu0.22.04.1~lo1
Calc: threaded
Comment 1 BobBau 2023-02-07 15:02:56 UTC
Created attachment 185180 [details]
Screenshot of dialog.
Comment 2 Khaled Hosny 2023-02-07 19:49:26 UTC
This does not mean the options are blocked (that would be greyed out), it means the features are set to the default value which is neither explicitly on of off i.e. the OpenType layout engine will either enable the feature or disable it based on its own criteria. You can click the checkbox to explicitly enable/disable the feature.
Comment 3 BobBau 2023-02-07 19:53:00 UTC
Unfortunately, I can't select the checkboxes because nothing moves.
Comment 4 Khaled Hosny 2023-02-08 07:16:34 UTC
Created attachment 185199 [details]
Screen recording

Works fine here.
Comment 5 EM 2023-04-20 16:05:20 UTC
I've encountered the same problem: OpenType font features checkboxes are preset to default and unclickable.

It's possible to work around it by manually toggling features with tags in the font textbox (smcp, c2sc, etc.), but it's is very tedious.

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: fr-FR (en_GB.UTF-8); UI: en-GB
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.22.04.1~lo1
Calc: threaded

(In reply to خالد حسني from comment #4)
> Created attachment 185199 [details]
> Screen recording
> 
> Works fine here.

Glad it's working fine on your end!
Comment 6 EM 2023-04-20 16:09:18 UTC
Created attachment 186821 [details]
Screenshot of OpenType Font Features with all checkboxes set to "Default" (i.e. with a minus sign, neither checked with a checkmark nor unchecked). Clicking on those checkboxes has no effect.
Comment 7 Khaled Hosny 2023-04-21 02:56:35 UTC
Might be GTK- or Ubuntu-specific, I’m on macOS and it works fine here.
Comment 8 Khaled Hosny 2023-04-23 23:05:22 UTC
I can reproduce this on Linux when using gtk3 but not with gen or kf5 vcl plugins, but I have no idea what is going on.

Caolán, the tri-state was introduced in 783f166793915a1c5a008de7142f773ad3898683, do you have any idea why it does not work with GTK?
Comment 9 Commit Notification 2023-04-24 18:48:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d6fcd7908f6db892e8d5fb3cabf7e0fe49328c4

Resolves: tdf#153441 use a TriStateEnabled helper

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2023-04-24 18:48:56 UTC
looks ok after than in trunk, backport to 7-5 in gerrit
Comment 11 Commit Notification 2023-04-24 23:46:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/23d303779440e8201ffc6fbcc08f9cffa5b585c9

Resolves: tdf#153441 use a TriStateEnabled helper

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 BobBau 2023-04-25 07:56:54 UTC
Wow thank you — cant wait!
Comment 13 Commit Notification 2023-04-25 08:29:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-3":

https://git.libreoffice.org/core/commit/04ae8bda4a219d1b6b3628813d76b5d8c984ced9

Resolves: tdf#153441 use a TriStateEnabled helper

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 BobBau 2023-04-25 08:33:23 UTC
Great — I will test it in 6 days!  :–)
Comment 15 BobBau 2023-05-15 17:51:06 UTC
Well, something has changed since the last update. Thank you! Now you can select the additional font functions. Unfortunately, this is still very cumbersome to use, because you have to click twice on a box to activate the desired property.

1. Click so that the blue field with a line in it becomes free.
2. Click so that the function is activated and a tick appears.

A few versions earlier all the boxes were empty and you clicked the properties at will. I find that clearer than a large number of quasi "preselected" options.
Comment 16 BobBau 2023-05-15 17:54:48 UTC
Created attachment 187302 [details]
Screenshot of new preselected font dialog.

Here you can see that all boxes are preselected. This is weird and unfortunately very non-functional.
Comment 17 Khaled Hosny 2023-05-15 18:01:01 UTC
(In reply to BobBau from comment #15)
> Well, something has changed since the last update. Thank you! Now you can
> select the additional font functions. Unfortunately, this is still very
> cumbersome to use, because you have to click twice on a box to activate the
> desired property.
> 
> 1. Click so that the blue field with a line in it becomes free.
> 2. Click so that the function is activated and a tick appears.
> 
> A few versions earlier all the boxes were empty and you clicked the
> properties at will. I find that clearer than a large number of quasi
> "preselected" options.

This is intentional, we want to differentiate between the default state when the feature is neither explicitly enabled nor explicitly disabled, and when the feature is explicitly disabled. Before this change it was not possible to disable a feature that is enabled by default.

We might try to improve this by maintaing a list of enabled/disabled by default features and making them explicitly checked/unchecked (it can be tricky since the exact list changes over time and can be different based on the text script), but this should be a different issue.
Comment 18 BogdanB 2023-05-15 18:40:15 UTC Comment hidden (obsolete)
Comment 19 BobBau 2023-05-15 18:42:13 UTC Comment hidden (obsolete)
Comment 20 BogdanB 2023-05-15 19:07:32 UTC Comment hidden (obsolete)