Resolves: tdf#153441 use a TriStateEnabled helper

Change-Id: I976e4271a072bfb53c676091509e1d4ef7dbcccb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150915
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>